kubernetes/base/redis-insight-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: redis-insight
  name: redis-insight
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-insight
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: redis-insight
    spec:
      containers:
      - image: redis/redisinsight:latest
        name: redisinsight
        ports:
        - containerPort: 5540
        resources: {}
status: {}
