kubernetes/base/redis-exporter-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-exporter
  labels:
    app: redis-exporter
spec:
  ports:
  - name: metrics
    port: 9121
    targetPort: 9121
  selector:
    app: redis-exporter
  type: ClusterIP
