kubernetes/base/redis-exporter.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-exporter
  labels:
    app: redis-exporter
spec:
  ports:
  - name: metrics
    port: 9121
    targetPort: 9121
  selector:
    app: redis-exporter
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-exporter
  labels:
    app: redis-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-exporter
  template:
    metadata:
      labels:
        app: redis-exporter
    spec:
      containers:
      - name: redis-exporter
        image: oliver006/redis_exporter:latest
        ports:
        - containerPort: 9121
