kubernetes/base/redis-insight-svc.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: redis-insight
  name: redis-insight
spec:
  ports:
  - name: "5540"
    port: 5540
    protocol: TCP
    targetPort: 5540
  selector:
    app: redis-insight
  type: ClusterIP
status:
  loadBalancer: {}
