kubernetes/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: redis
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: redis.styve-lioumba.fr
    http:
      paths:
      - backend:
          service:
            name: redis-insight
            port:
              number: 5540
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
